apps/mobibix-android/build_output.txt
> Task :app:preBuild UP-TO-DATE
> Task :app:preDebugBuild UP-TO-DATE
> Task :app:mergeDebugNativeDebugMetadata NO-SOURCE
> Task :app:checkKotlinGradlePluginConfigurationErrors SKIPPED
> Task :app:generateDebugBuildConfig UP-TO-DATE
> Task :app:checkDebugAarMetadata UP-TO-DATE
> Task :app:processDebugNavigationResources UP-TO-DATE
> Task :app:compileDebugNavigationResources UP-TO-DATE
> Task :app:generateDebugResValues UP-TO-DATE
> Task :app:processDebugGoogleServices UP-TO-DATE
> Task :app:mapDebugSourceSetPaths UP-TO-DATE
> Task :app:generateDebugResources UP-TO-DATE
> Task :app:mergeDebugResources UP-TO-DATE
> Task :app:packageDebugResources UP-TO-DATE
> Task :app:parseDebugLocalResources UP-TO-DATE
> Task :app:createDebugCompatibleScreenManifests UP-TO-DATE
> Task :app:extractDeepLinksDebug UP-TO-DATE
> Task :app:processDebugMainManifest UP-TO-DATE
> Task :app:processDebugManifest UP-TO-DATE
> Task :app:processDebugManifestForPackage UP-TO-DATE
> Task :app:processDebugResources UP-TO-DATE
> Task :app:kspDebugKotlin UP-TO-DATE
> Task :app:compileDebugKotlin UP-TO-DATE
> Task :app:javaPreCompileDebug UP-TO-DATE
> Task :app:compileDebugJavaWithJavac UP-TO-DATE
> Task :app:mergeDebugShaders UP-TO-DATE
> Task :app:compileDebugShaders NO-SOURCE
> Task :app:generateDebugAssets UP-TO-DATE
> Task :app:mergeDebugAssets UP-TO-DATE
> Task :app:compressDebugAssets UP-TO-DATE
> Task :app:hiltAggregateDepsDebug UP-TO-DATE

> Task :app:hiltJavaCompileDebug
E:\Projects\gym-saas\apps\mobibix-android\app\build\generated\hilt\component_sources\debug\com\aiyal\mobibix\MobiBixApplication_HiltComponents.java:170: error: [Dagger/MissingBinding] com.aiyal.mobibix.data.network.CrmApi cannot be provided without an @Provides-annotated method.
  public abstract static class SingletonC implements MobiBixApplication_GeneratedInjector,
                         ^
  
  Missing binding usage:
      com.aiyal.mobibix.data.network.CrmApi is injected at
          com.aiyal.mobibix.data.repository.CrmRepository(crmApi)
      com.aiyal.mobibix.data.repository.CrmRepository is injected at
          com.aiyal.mobibix.ui.features.crm.CrmViewModel(repository, à)
      com.aiyal.mobibix.ui.features.crm.CrmViewModel is injected at
          com.aiyal.mobibix.ui.features.crm.CrmViewModel_HiltModules.BindsModule.binds(arg0)
      @dagger.hilt.android.internal.lifecycle.HiltViewModelMap java.util.Map<java.lang.String,javax.inject.Provider<androidx.lifecycle.ViewModel>> is requested at
          dagger.hilt.android.internal.lifecycle.HiltViewModelFactory.ViewModelFactoriesEntryPoint.getHiltViewModelMap() [com.aiyal.mobibix.MobiBixApplication_HiltComponents.SingletonC ? com.aiyal.mobibix.MobiBixApplication_HiltComponents.ActivityRetainedC ? com.aiyal.mobibix.MobiBixApplication_HiltComponents.ViewModelC]
1 error

> Task :app:hiltJavaCompileDebug FAILED

[Incubating] Problems report is available at: file:///E:/Projects/gym-saas/apps/mobibix-android/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':app:hiltJavaCompileDebug'.
> Compilation failed; see the compiler output below.
  E:\Projects\gym-saas\apps\mobibix-android\app\build\generated\hilt\component_sources\debug\com\aiyal\mobibix\MobiBixApplication_HiltComponents.java:170: error: [Dagger/MissingBinding] com.aiyal.mobibix.data.network.CrmApi cannot be provided without an @Provides-annotated method.
    public abstract static class SingletonC implements MobiBixApplication_GeneratedInjector,
                           ^
    
    Missing binding usage:
        com.aiyal.mobibix.data.network.CrmApi is injected at
            com.aiyal.mobibix.data.repository.CrmRepository(crmApi)
        com.aiyal.mobibix.data.repository.CrmRepository is injected at
            com.aiyal.mobibix.ui.features.crm.CrmViewModel(repository, à)
        com.aiyal.mobibix.ui.features.crm.CrmViewModel is injected at
            com.aiyal.mobibix.ui.features.crm.CrmViewModel_HiltModules.BindsModule.binds(arg0)
        @dagger.hilt.android.internal.lifecycle.HiltViewModelMap java.util.Map<java.lang.String,javax.inject.Provider<androidx.lifecycle.ViewModel>> is requested at
            dagger.hilt.android.internal.lifecycle.HiltViewModelFactory.ViewModelFactoriesEntryPoint.getHiltViewModelMap() [com.aiyal.mobibix.MobiBixApplication_HiltComponents.SingletonC ? com.aiyal.mobibix.MobiBixApplication_HiltComponents.ActivityRetainedC ? com.aiyal.mobibix.MobiBixApplication_HiltComponents.ViewModelC]
  1 error

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights.

BUILD FAILED in 21s
26 actionable tasks: 1 executed, 25 up-to-date
